# Grounded-Segment-Anything

./: .gitignore  CMakeLists.txt  Pipfile  package.xml
launch/: segmentation.launch
scripts/: LightHQSAM  call_example.py  efficient_sam.py  light_hq_sam.py  segmentation.py
srv/: Segmentation.srv
